<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_PhaseSelect" Id="{33075ffc-ab43-4ae0-88ee-68b6798ae8e1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_PhaseSelect :
(
	ALL := 0,
    L1,
    L2,
    L3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>