<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_StorageChargeState" Id="{9f12900a-69c5-40b8-8a68-7c93f6ae6cb9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_StorageChargeState :
(
	off := 1,
    empty := 2,
    discharging := 3,
    charging := 4,
    full := 5,
    holding := 6,
    testing := 7
) WORD;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>